@@ -188,3 +188,19 @@ class File(Backend):
         """
         print "backend un_register_client %s/%s" % (fs, node)
 
+    def register_target(self, fs, target):
+        """
+        Set the specified `target', used by `fs', as 'in use' in the backend.
+
+        This target could not be use anymore for other filesystems.
+        """
+        pass
+
+    def unregister_target(self, fs, target):
+        """
+        Set the specified `target', used by `fs', as available in the backend.
+
+        This target could be now reuse, for other targets of the same
+        filesystem or any other one.
+        """
+        pass
